WebCore/loader/ImageDocument.h
@@ -36,6 +36,8 @@ class ImageDocument : public HTMLDocument
 public:
     ImageDocument(DOMImplementation*, FrameView* = 0);
 
+    virtual bool isImageDocument() const { return true; }
+    
     virtual Tokenizer* createTokenizer();
 };
     
